--- a/config/scaffolding/Adapters_stgMarch7Project.yml
+++ b/config/scaffolding/Adapters_stgMarch7Project.yml
@@ -7,3 +7,62 @@ packages:
   gitUrl: https://github.com/Sephali-Smrutisikha-IBM-1
   gitUsername: Sephali-Smrutisikha-IBM-1
   gitBranch: main
+- name: WmJDBCAdapter
+  wpmServer: https://packages.webmethods.io
+  wpmRegistry: licensed
+services:
+- serviceName: project.adapters_stgmarch7.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections:Database_cdt
+  packages:
+  - name: Adapters_stgMarch7Project
+    version: "1.0"
+  - name: WmJDBCAdapter
+    version: 10.3.0.0.34
+    wpmServer: https://packages.webmethods.io
+    wpmRegistry: licensed
+configurationVariables:
+  ? artConnection.Adapters_stgMarch7Project.project.adapters_stgmarch7.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.Database_cdt.connectionManagerSettings.poolable
+  : "false"
+  ? artConnection.Adapters_stgMarch7Project.project.adapters_stgmarch7.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.Database_cdt.connectionSettings.otherProperties
+  : ""
+  ? artConnection.Adapters_stgMarch7Project.project.adapters_stgmarch7.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.Database_cdt.connectionSettings.dbType
+  : ORACLE
+  ? artConnection.Adapters_stgMarch7Project.project.adapters_stgmarch7.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.Database_cdt.connectionSettings.serverName
+  : adapter-oracle-121-on-amazonrds.cdmjexwbzoym.us-east-1.rds.amazonaws.com
+  ? artConnection.Adapters_stgMarch7Project.project.adapters_stgmarch7.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.Database_cdt.connectionSettings.databaseName
+  : ORCL
+  ? artConnection.Adapters_stgMarch7Project.project.adapters_stgmarch7.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.Database_cdt.connectionSettings.keyStore
+  : ""
+  ? artConnection.Adapters_stgMarch7Project.project.adapters_stgmarch7.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.Database_cdt.connectionManagerSettings.blockingTimeout
+  : "1000"
+  ? artConnection.Adapters_stgMarch7Project.project.adapters_stgmarch7.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.Database_cdt.connectionSettings.password
+  : "{AES}gOk3wygfWVjWqDc4SLehnQ=="
+  ? artConnection.Adapters_stgMarch7Project.project.adapters_stgmarch7.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.Database_cdt.connectionManagerSettings.expireTimeout
+  : "1000"
+  ? artConnection.Adapters_stgMarch7Project.project.adapters_stgmarch7.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.Database_cdt.connectionManagerSettings.startupBackoffSecs
+  : "10"
+  ? artConnection.Adapters_stgMarch7Project.project.adapters_stgmarch7.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.Database_cdt.connectionSettings.user
+  : JDBC_BVT
+  ? artConnection.Adapters_stgMarch7Project.project.adapters_stgmarch7.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.Database_cdt.connectionManagerSettings.minimumPoolSize
+  : "1"
+  ? artConnection.Adapters_stgMarch7Project.project.adapters_stgmarch7.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.Database_cdt.connectionEnabled
+  : "false"
+  ? artConnection.Adapters_stgMarch7Project.project.adapters_stgmarch7.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.Database_cdt.connectionSettings.trustStore
+  : ""
+  ? artConnection.Adapters_stgMarch7Project.project.adapters_stgmarch7.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.Database_cdt.connectionSettings.portNumber
+  : "1521"
+  ? artConnection.Adapters_stgMarch7Project.project.adapters_stgmarch7.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.Database_cdt.connectionManagerSettings.maximumPoolSize
+  : "10"
+  ? artConnection.Adapters_stgMarch7Project.project.adapters_stgmarch7.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.Database_cdt.connectionManagerSettings.startupRetryCount
+  : "0"
+  ? artConnection.Adapters_stgMarch7Project.project.adapters_stgmarch7.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.Database_cdt.connectionManagerSettings.heartBeatInterval
+  : "0"
+  ? artConnection.Adapters_stgMarch7Project.project.adapters_stgmarch7.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.Database_cdt.connectionManagerSettings.poolIncrementSize
+  : "1"
+  ? artConnection.Adapters_stgMarch7Project.project.adapters_stgmarch7.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.Database_cdt.connectionSettings.datasourceClass
+  : com.wm.dd.jdbcx.oracle.OracleDataSource
+  ? artConnection.Adapters_stgMarch7Project.project.adapters_stgmarch7.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.Database_cdt.connectionSettings.networkProtocol
+  : ""
+  ? artConnection.Adapters_stgMarch7Project.project.adapters_stgmarch7.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.Database_cdt.connectionSettings.transactionType
+  : LOCAL_TRANSACTION
+  ? artConnection.Adapters_stgMarch7Project.project.adapters_stgmarch7.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.Database_cdt.connectionSettings.driverType
+  : Progress® DataDirect®
