--- a/config/scaffolding/Adapters_stgMarch7Project.yml
+++ b/config/scaffolding/Adapters_stgMarch7Project.yml
@@ -28,6 +28,14 @@ services:
     version: 10.3.0.0.34
     wpmServer: https://packages.webmethods.io
     wpmRegistry: licensed
+- serviceName: project.adapters_stgmarch7.integrations:db
+  packages:
+  - name: Adapters_stgMarch7Project
+    version: "1.0"
+  - name: WmJDBCAdapter
+    version: 10.3.0.0.34
+    wpmServer: https://packages.webmethods.io
+    wpmRegistry: licensed
 configurationVariables:
   ? artConnection.Adapters_stgMarch7Project.project.adapters_stgmarch7.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.Database_cdt.connectionManagerSettings.poolable
   : "false"
