--- a/config/scaffolding/Adapters_stgMarch7Project.yml
+++ b/config/scaffolding/Adapters_stgMarch7Project.yml
@@ -28,6 +28,14 @@ services:
     version: 10.3.0.0.34
     wpmServer: https://packages.webmethods.io
     wpmRegistry: licensed
+- serviceName: project.adapters_stgmarch7.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections:Database_ertd
+  packages:
+  - name: Adapters_stgMarch7Project
+    version: "1.0"
+  - name: WmJDBCAdapter
+    version: 10.3.0.0.34
+    wpmServer: https://packages.webmethods.io
+    wpmRegistry: licensed
 - serviceName: project.adapters_stgmarch7.integrations:db
   packages:
   - name: Adapters_stgMarch7Project
@@ -39,10 +47,16 @@ services:
 configurationVariables:
   ? artConnection.Adapters_stgMarch7Project.project.adapters_stgmarch7.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.Database_cdt.connectionManagerSettings.poolable
   : "false"
+  ? artConnection.Adapters_stgMarch7Project.project.adapters_stgmarch7.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.Database_ertd.connectionSettings.user
+  : JDBC_BVT
   ? artConnection.Adapters_stgMarch7Project.project.adapters_stgmarch7.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.Database_ert_7March.connectionSettings.driverType
   : Progress® DataDirect®
+  ? artConnection.Adapters_stgMarch7Project.project.adapters_stgmarch7.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.Database_ertd.connectionSettings.dbType
+  : ORACLE
   ? artConnection.Adapters_stgMarch7Project.project.adapters_stgmarch7.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.Database_cdt.connectionSettings.dbType
   : ORACLE
+  ? artConnection.Adapters_stgMarch7Project.project.adapters_stgmarch7.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.Database_ertd.connectionManagerSettings.poolable
+  : "false"
   ? artConnection.Adapters_stgMarch7Project.project.adapters_stgmarch7.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.Database_cdt.connectionSettings.serverName
   : adapter-oracle-121-on-amazonrds.cdmjexwbzoym.us-east-1.rds.amazonaws.com
   ? artConnection.Adapters_stgMarch7Project.project.adapters_stgmarch7.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.Database_ert_7March.connectionSettings.transactionType
@@ -57,28 +71,48 @@ configurationVariables:
   : "1000"
   ? artConnection.Adapters_stgMarch7Project.project.adapters_stgmarch7.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.Database_cdt.connectionSettings.password
   : "{AES}gOk3wygfWVjWqDc4SLehnQ=="
+  ? artConnection.Adapters_stgMarch7Project.project.adapters_stgmarch7.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.Database_ertd.connectionManagerSettings.expireTimeout
+  : "1000"
   ? artConnection.Adapters_stgMarch7Project.project.adapters_stgmarch7.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.Database_cdt.connectionManagerSettings.expireTimeout
   : "1000"
   ? artConnection.Adapters_stgMarch7Project.project.adapters_stgmarch7.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.Database_ert_7March.connectionSettings.dbType
   : ORACLE
+  ? artConnection.Adapters_stgMarch7Project.project.adapters_stgmarch7.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.Database_ertd.connectionManagerSettings.heartBeatInterval
+  : "0"
+  ? artConnection.Adapters_stgMarch7Project.project.adapters_stgmarch7.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.Database_ertd.connectionSettings.datasourceClass
+  : com.wm.dd.jdbcx.oracle.OracleDataSource
+  ? artConnection.Adapters_stgMarch7Project.project.adapters_stgmarch7.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.Database_ertd.connectionManagerSettings.minimumPoolSize
+  : "1"
   ? artConnection.Adapters_stgMarch7Project.project.adapters_stgmarch7.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.Database_ert_7March.connectionManagerSettings.maximumPoolSize
   : "10"
+  ? artConnection.Adapters_stgMarch7Project.project.adapters_stgmarch7.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.Database_ertd.connectionManagerSettings.startupRetryCount
+  : "0"
   ? artConnection.Adapters_stgMarch7Project.project.adapters_stgmarch7.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.Database_ert_7March.connectionManagerSettings.heartBeatInterval
   : "0"
   ? artConnection.Adapters_stgMarch7Project.project.adapters_stgmarch7.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.Database_cdt.connectionManagerSettings.maximumPoolSize
   : "10"
+  ? artConnection.Adapters_stgMarch7Project.project.adapters_stgmarch7.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.Database_ertd.connectionEnabled
+  : "false"
   ? artConnection.Adapters_stgMarch7Project.project.adapters_stgmarch7.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.Database_cdt.connectionManagerSettings.heartBeatInterval
   : "0"
   ? artConnection.Adapters_stgMarch7Project.project.adapters_stgmarch7.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.Database_cdt.connectionManagerSettings.poolIncrementSize
   : "1"
+  ? artConnection.Adapters_stgMarch7Project.project.adapters_stgmarch7.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.Database_ertd.connectionSettings.portNumber
+  : "1521"
   ? artConnection.Adapters_stgMarch7Project.project.adapters_stgmarch7.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.Database_cdt.connectionSettings.datasourceClass
   : com.wm.dd.jdbcx.oracle.OracleDataSource
   ? artConnection.Adapters_stgMarch7Project.project.adapters_stgmarch7.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.Database_ert_7March.connectionSettings.databaseName
   : ORCL
+  ? artConnection.Adapters_stgMarch7Project.project.adapters_stgmarch7.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.Database_ertd.connectionSettings.password
+  : "{AES}gOk3wygfWVjWqDc4SLehnQ=="
+  ? artConnection.Adapters_stgMarch7Project.project.adapters_stgmarch7.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.Database_ertd.connectionManagerSettings.maximumPoolSize
+  : "10"
   ? artConnection.Adapters_stgMarch7Project.project.adapters_stgmarch7.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.Database_cdt.connectionSettings.networkProtocol
   : ""
   ? artConnection.Adapters_stgMarch7Project.project.adapters_stgmarch7.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.Database_ert_7March.connectionManagerSettings.poolIncrementSize
   : "1"
+  ? artConnection.Adapters_stgMarch7Project.project.adapters_stgmarch7.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.Database_ertd.connectionSettings.trustStore
+  : ""
   ? artConnection.Adapters_stgMarch7Project.project.adapters_stgmarch7.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.Database_ert_7March.connectionEnabled
   : "false"
   ? artConnection.Adapters_stgMarch7Project.project.adapters_stgmarch7.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.Database_cdt.connectionSettings.driverType
@@ -89,28 +123,44 @@ configurationVariables:
   : ""
   ? artConnection.Adapters_stgMarch7Project.project.adapters_stgmarch7.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.Database_cdt.connectionSettings.otherProperties
   : ""
+  ? artConnection.Adapters_stgMarch7Project.project.adapters_stgmarch7.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.Database_ertd.connectionSettings.databaseName
+  : ORCL
   ? artConnection.Adapters_stgMarch7Project.project.adapters_stgmarch7.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.Database_ert_7March.connectionManagerSettings.poolable
   : "false"
+  ? artConnection.Adapters_stgMarch7Project.project.adapters_stgmarch7.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.Database_ertd.connectionSettings.driverType
+  : Progress® DataDirect®
   ? artConnection.Adapters_stgMarch7Project.project.adapters_stgmarch7.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.Database_ert_7March.connectionManagerSettings.startupBackoffSecs
   : "10"
+  ? artConnection.Adapters_stgMarch7Project.project.adapters_stgmarch7.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.Database_ertd.connectionManagerSettings.blockingTimeout
+  : "1000"
   ? artConnection.Adapters_stgMarch7Project.project.adapters_stgmarch7.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.Database_cdt.connectionSettings.keyStore
   : ""
   ? artConnection.Adapters_stgMarch7Project.project.adapters_stgmarch7.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.Database_ert_7March.connectionManagerSettings.startupRetryCount
   : "0"
+  ? artConnection.Adapters_stgMarch7Project.project.adapters_stgmarch7.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.Database_ertd.connectionSettings.serverName
+  : adapter-oracle-121-on-amazonrds.cdmjexwbzoym.us-east-1.rds.amazonaws.com
   ? artConnection.Adapters_stgMarch7Project.project.adapters_stgmarch7.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.Database_cdt.connectionManagerSettings.startupBackoffSecs
   : "10"
   ? artConnection.Adapters_stgMarch7Project.project.adapters_stgmarch7.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.Database_cdt.connectionSettings.user
   : JDBC_BVT
+  ? artConnection.Adapters_stgMarch7Project.project.adapters_stgmarch7.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.Database_ertd.connectionSettings.transactionType
+  : LOCAL_TRANSACTION
   ? artConnection.Adapters_stgMarch7Project.project.adapters_stgmarch7.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.Database_cdt.connectionManagerSettings.minimumPoolSize
   : "1"
+  ? artConnection.Adapters_stgMarch7Project.project.adapters_stgmarch7.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.Database_ertd.connectionSettings.keyStore
+  : ""
   ? artConnection.Adapters_stgMarch7Project.project.adapters_stgmarch7.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.Database_ert_7March.connectionSettings.keyStore
   : ""
   ? artConnection.Adapters_stgMarch7Project.project.adapters_stgmarch7.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.Database_cdt.connectionEnabled
   : "true"
   ? artConnection.Adapters_stgMarch7Project.project.adapters_stgmarch7.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.Database_ert_7March.connectionSettings.networkProtocol
   : ""
+  ? artConnection.Adapters_stgMarch7Project.project.adapters_stgmarch7.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.Database_ertd.connectionSettings.networkProtocol
+  : ""
   ? artConnection.Adapters_stgMarch7Project.project.adapters_stgmarch7.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.Database_cdt.connectionSettings.trustStore
   : ""
+  ? artConnection.Adapters_stgMarch7Project.project.adapters_stgmarch7.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.Database_ertd.connectionManagerSettings.startupBackoffSecs
+  : "10"
   ? artConnection.Adapters_stgMarch7Project.project.adapters_stgmarch7.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.Database_ert_7March.connectionManagerSettings.blockingTimeout
   : "1000"
   ? artConnection.Adapters_stgMarch7Project.project.adapters_stgmarch7.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.Database_cdt.connectionSettings.portNumber
@@ -121,11 +171,15 @@ configurationVariables:
   : "{AES}gOk3wygfWVjWqDc4SLehnQ=="
   ? artConnection.Adapters_stgMarch7Project.project.adapters_stgmarch7.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.Database_ert_7March.connectionSettings.serverName
   : adapter-oracle-121-on-amazonrds.cdmjexwbzoym.us-east-1.rds.amazonaws.com
+  ? artConnection.Adapters_stgMarch7Project.project.adapters_stgmarch7.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.Database_ertd.connectionManagerSettings.poolIncrementSize
+  : "1"
   ? artConnection.Adapters_stgMarch7Project.project.adapters_stgmarch7.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.Database_cdt.connectionManagerSettings.startupRetryCount
   : "0"
   ? artConnection.Adapters_stgMarch7Project.project.adapters_stgmarch7.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.Database_cdt.connectionSettings.transactionType
   : LOCAL_TRANSACTION
   ? artConnection.Adapters_stgMarch7Project.project.adapters_stgmarch7.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.Database_ert_7March.connectionSettings.user
   : JDBC_BVT
+  ? artConnection.Adapters_stgMarch7Project.project.adapters_stgmarch7.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.Database_ertd.connectionSettings.otherProperties
+  : ""
   ? artConnection.Adapters_stgMarch7Project.project.adapters_stgmarch7.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.Database_ert_7March.connectionManagerSettings.expireTimeout
   : "1000"
